# python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mypackage/: __init__.py
tests/: test_smoke.py
