[project]
name = "mypackage"
version = "0.1.0"
description = "A new Python project"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

# Uncomment to add a CLI entry point:
# [project.scripts]
# mypackage = "mypackage.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypackage"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    # --- Core ---
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort (import sorting)
    "B",       # flake8-bugbear
    "UP",      # pyupgrade (modern Python syntax)
    "C4",      # flake8-comprehensions
    "RUF",     # ruff-specific rules
    "ARG",     # unused arguments
    "SIM",     # flake8-simplify
    "A",       # flake8-builtins (shadowing builtins)
    # --- Safety ---
    "BLE",     # blind exception (bare except)
    "DTZ",     # datetime timezone awareness
    "TCH",     # type-checking imports (move to TYPE_CHECKING block)
    "TRY400",  # use logger.exception inside except blocks
    # --- Quality ---
    "D417",    # missing docstring params (only checks existing docstrings)
    "FURB",    # refurb — modern Python idioms
    "PLR0912", # too many branches (complexity signal)
]
ignore = ["E501"]  # line length handled by ruff format

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "TCH", "DTZ", "PLR0912"]  # tests get more slack
"scripts/**" = ["PLR0912"]

# ---------------------------------------------------------------------------
# Pyright — type checking
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportPossiblyUnboundVariable = "error"
venvPath = "."
venv = ".venv"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]

# ---------------------------------------------------------------------------
# Dev dependencies
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff",
    "pyright",
    "pre-commit",
]
